Mon Feb 28 12:40:46 1994  Jim Kingdon  (kingdon@deneb.cygnus.com)

	* mips-tdep.c (mips_step_skips_delay), config/mips/tm-mips.h
	(STEP_SKIPS_DELAY): Added.
	* infrun.c (proceed) [STEP_SKIPS_DELAY]: Check for a breakpoint in
	the delay slot.

	* valprint.c (val_print_string): If errcode is set, always print
	an error, regardless of force_ellipsis.  In the non-EIO case,
	just print the error message rather than calling error().  Don't
	access *(bufptr-1) if bufptr points to the start of the buffer.
	When looking for '\0', don't increment bufptr and addr if bufptr
	started out already at limit.  If an error happens on fetching the
	first character, don't print the string.

Sun Feb 27 21:05:06 1994  Jim Kingdon  (kingdon@deneb.cygnus.com)

	* config/m68k/tm-apollo68b.h: Remove HAVE_68881 define; it is
	obsolete. 

	* i387-tdep.c, i386-tdep.c i386v-nat.c, i386aix-nat.c,
	i386m3-nat.c, config/m68k/tm-m68k.h, i960-tdep.c
	config/i960/tm-i960.h, remote-nindy.c, config/m88k/tm-m88k.h,
	m88k-tdep.c: Use floatformat.h instead of ieee-float.h.
	* sparc-tdep.c: Remove now-obsolete ieee-float.h stuff
	* findvar.c: Update comment regarding ieee-float.h.

Sun Feb 27 21:39:48 1994  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* config/i386/tm-i386v4.h (I386V4_SIGTRAMP_SAVED_PC, IN_SIGTRAMP,
	FRAME_CHAIN, FRAMELESS_FUNCTION_INVOCATION, FRAME_SAVED_PC):
	Define to make backtracing through the various sigtramp handlers
	work.
	* i386-tdep.c (i386v4_sigtramp_saved_pc):  New routine to fetch
	the saved pc from ucontext on the stack for SVR4 signal handling.

Fri Feb 25 09:41:11 1994  Jim Kingdon  (kingdon@deneb.cygnus.com)

	* remote.c, remote-mon.c, remote-utils.c, remote-utils.h,
	target.h, remote-es.c, remote-nindy.c: Don't set baud rate if
	baud_rate is -1.  Remove sr_get_baud_rate and sr_set_baud_rate;
	just use the global variable itself.  When printing baud rate,
	don't print a baud rate if baud_rate is -1.

	* coffread.c (read_coff_symtab): Pass mst_file_* to